@@ -19,7 +19,7 @@ Version 1.94
 	Added plugin to start gource repository visualizer
 	Added toolbar to diff viewer to jump to next change
 	Added file explorer option to the file menu
-	Added from and to branch name to push dialog 
+	Added from and to branch to push dialog 
 	Quicksearch now also searches in branches
 	All windows positions are now saved	
 	Settings dialog performance improved
@@ -27,6 +27,7 @@ Version 1.94
 	Author image size can be set in context menu of gravatar control
 	The diff viewer now shows the old sha1 and new sha1 when viewing a submodule diff
 	The default web proxy is used to connect to internet
+	Replaced checkbox on merge branch dialog for more user friendly radio buttons
 
 Version 1.93
 	Fixed bug: wrong icon drawn in commit dialog for deleted files
